Cache mods in container layer

--- a/Dockerfile_webserver
+++ b/Dockerfile_webserver
@@ -1,6 +1,12 @@
 # Build image
 FROM golang:1.13-alpine AS build-env
 WORKDIR /root/
+
+# Download mods here to be cached
+COPY go.mod ./
+COPY go.sum ./
+RUN go mod download
+
 COPY ./ ./
 RUN apk update && apk add git
 RUN cd ./cmd/webserver && go mod tidy && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD`"
