--- a/Dockerfile_webserver
+++ b/Dockerfile_webserver
@@ -9,7 +9,7 @@ RUN go mod download
 
 COPY ./ ./
 RUN apk update && apk add git
-RUN cd ./cmd/webserver && go mod tidy && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD`"
+RUN cd ./cmd/webserver && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD`"
 
 # Runtime image
 FROM alpine:3.11 AS runtime-env
