Only copy over what we need

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,9 +6,9 @@
 /cmd/steam/steam
 /cmd/test/test
 
-# Source maps
-/cmd/webserver/assets/dist/main.css.map
-/cmd/webserver/assets/dist/main.js.map
+# Assets
+/cmd/webserver/assets/
+!/cmd/webserver/assets/GeoLite2-Country.mmdb
 
 # Vendors
 /node_modules/
