--- a/Dockerfile_scaler
+++ b/Dockerfile_scaler
@@ -14,10 +14,10 @@ RUN cd ./cmd/scaler && go mod tidy && CGO_ENABLED=0 GOOS=linux go build -a -ldfl
 # Runtime image
 FROM alpine:3.11 AS runtime-env
 WORKDIR /root/
-COPY --from=build-env /root/autoscaler ./
+COPY --from=build-env /root/scaler ./
 COPY ./list.gohtml ./list.gohtml
 COPY ./cmd/webserver/health-check.sh ./health-check.sh
 RUN ["chmod", "+x", "health-check.sh"]
 RUN apk update && apk add ca-certificates curl bash
-CMD ["./autoscaler"]
+CMD ["./scaler"]
 HEALTHCHECK --interval=60s --timeout=10s --start-period=30s --retries=2 CMD ./health-check.sh
