--- a/Dockerfile_scaler
+++ b/Dockerfile_scaler
@@ -14,7 +14,7 @@ RUN cd ./cmd/scaler && go mod tidy && CGO_ENABLED=0 GOOS=linux go build -a -ldfl
 # Runtime image
 FROM alpine:3.11 AS runtime-env
 WORKDIR /root/
-COPY --from=build-env /root/scaler ./
+COPY --from=build-env /root/cmd/scaler/scaler ./
 COPY ./list.gohtml ./list.gohtml
 COPY ./cmd/webserver/health-check.sh ./health-check.sh
 RUN ["chmod", "+x", "health-check.sh"]
