--- a/Dockerfile_consumers
+++ b/Dockerfile_consumers
@@ -8,16 +8,20 @@ COPY go.sum ./
 RUN go mod download
 
 COPY ./ ./
-RUN apk update && apk add git
-RUN cd ./cmd/consumers && go mod tidy && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD`"
+RUN apk update \
+  && apk add git \
+  && cd ./cmd/consumers \
+  && go mod tidy \
+  && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD`"
 
 # Runtime image
 FROM alpine:3.11 AS runtime-env
 WORKDIR /root/
 COPY --from=build-env /root/cmd/consumers/consumers ./
 COPY ./cmd/consumers/health-check.sh ./health-check.sh
-RUN ["chmod", "+x", "health-check.sh"]
-RUN touch ./google-auth.json
-RUN apk update && apk add ca-certificates curl bash
+RUN chmod +x health-check.sh \
+  && touch ./google-auth.json \
+  && apk update \
+  && apk add ca-certificates curl bash
 CMD ["./consumers"]
 HEALTHCHECK --interval=60s --timeout=10s --start-period=30s --retries=2 CMD ./health-check.sh
