--- a/Dockerfile_scaler
+++ b/Dockerfile_scaler
@@ -8,8 +8,11 @@ COPY go.sum ./
 RUN go mod download
 
 COPY ./ ./
-RUN apk update && apk add git
-RUN cd ./cmd/scaler && go mod tidy && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD`"
+RUN apk update \
+  && apk add git \
+  && cd ./cmd/scaler \
+  && go mod tidy \
+  && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD`"
 
 # Runtime image
 FROM alpine:3.11 AS runtime-env
@@ -17,7 +20,8 @@ WORKDIR /root/
 COPY --from=build-env /root/cmd/scaler/scaler ./
 COPY ./cmd/scaler/list.gohtml ./list.gohtml
 COPY ./cmd/scaler/health-check.sh ./health-check.sh
-RUN ["chmod", "+x", "health-check.sh"]
-RUN apk update && apk add ca-certificates curl bash
+RUN chmod +x health-check.sh \
+  && apk update \
+  && apk add ca-certificates curl bash
 CMD ["./scaler"]
 HEALTHCHECK --interval=60s --timeout=10s --start-period=30s --retries=2 CMD ./health-check.sh
