--- a/cloudbuild_chatbot.yaml
+++ b/cloudbuild_chatbot.yaml
@@ -12,11 +12,9 @@ steps:
       - "-t"
       - "gcr.io/$PROJECT_ID/chatbot:latest"
       - "."
-#tags:
-#  - "$SHORT_SHA"
-#  - "$TAG_NAME"
-#  - "latest"
+tags:
+  - "$SHORT_SHA"
+  - "$TAG_NAME"
+  - "latest"
 images:
-  - "gcr.io/$PROJECT_ID/chatbot:$SHORT_SHA"
-  - "gcr.io/$PROJECT_ID/chatbot:$TAG_NAME"
-  - "gcr.io/$PROJECT_ID/chatbot:$latest"
+  - "gcr.io/$PROJECT_ID/chatbot"
