--- a/Dockerfile_consumers
+++ b/Dockerfile_consumers
@@ -12,7 +12,7 @@ RUN apk update \
   && apk add git \
   && cd ./cmd/consumers \
   && go mod tidy \
-  && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD`" -ldflags "-X main.commits=`git rev-list --count master`"
+  && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD` -X main.commits=`git rev-list --count master`"
 
 # Runtime image
 FROM alpine:3.11 AS runtime-env
