Switch realize out

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /cmd/webserver/webserver
 /cmd/steam/steam
 /cmd/test/test
+/cmd/scaler/scaler
+
+# Modd
+run
+modd.conf
 
 # Source maps
 /cmd/webserver/assets/dist/main.css.map
