--- a/revive.toml
+++ b/revive.toml
@@ -10,7 +10,7 @@ warningCode = 0
 [rule.blank-imports]
 [rule.bool-literal-in-expr]
 [rule.call-to-gc]
-[rule.confusing-naming]
+#[rule.confusing-naming]
 [rule.confusing-results]
 [rule.constant-logical-expr]
 [rule.context-as-argument]
@@ -37,9 +37,9 @@ warningCode = 0
 #[rule.max-public-structs]
 [rule.modifies-parameter]
 [rule.modifies-value-receiver]
-#[rule.package-comments]
-[rule.range]
+[rule.package-comments]
 [rule.range-val-in-closure]
+[rule.range]
 [rule.receiver-naming]
 [rule.redefines-builtin-id]
 [rule.struct-tag]
@@ -48,7 +48,7 @@ warningCode = 0
 [rule.unexported-return]
 [rule.unnecessary-stmt]
 [rule.unreachable-code]
-[rule.unused-parameter]
-[rule.var-declaration]
-[rule.var-naming]
+#[rule.unused-parameter]
+#[rule.var-declaration]
+#[rule.var-naming]
 [rule.waitgroup-by-value]
