--- a/cloudbuild_frontend.yaml
+++ b/cloudbuild_frontend.yaml
@@ -3,7 +3,7 @@ steps:
     args: ["fetch", "--unshallow"]
 
   - name: gcr.io/cloud-builders/docker
-    args: ['build', '-tag', 'gcr.io/$PROJECT_ID/frontend', '-file', 'Dockerfile_frontend', '.']
+    args: ['build', '--tag', 'gcr.io/$PROJECT_ID/frontend', '--file', 'Dockerfile_frontend', '.']
 
   - name: gcr.io/cloud-builders/docker
     args: ['push', 'gcr.io/$PROJECT_ID/frontend']
