--- a/Dockerfile_api
+++ b/Dockerfile_api
@@ -17,7 +17,7 @@ RUN apk update \
 FROM alpine:3.12 AS runtime-env
 WORKDIR /root/
 COPY --from=build-env /root/cmd/api/api ./
-COPY ./cmd/api/_health-check.sh ./health-check.sh
+COPY ./cmd/api/scripts/health-check.sh ./health-check.sh
 RUN chmod +x health-check.sh \
   && touch ./google-auth.json \
   && apk update \
