--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Binaries
+/cmd/chatbot/chatbot
+/cmd/consumers/consumers
+/cmd/crons/crons
+/cmd/frontend/frontend
+/cmd/steam/steam
+/cmd/test/test
+/cmd/scaler/scaler
+
 # Source maps
 /cmd/frontend/assets/dist/main.css.map
 /cmd/frontend/assets/dist/main.js.map
