--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,6 @@ steps:
     args: [ 'build', '--tag', 'gcr.io/$PROJECT_ID/$_BIN:latest', '--tag', 'gcr.io/$PROJECT_ID/$_BIN:$SHORT_SHA', '--file', './docker/Dockerfile_$_BIN', '.' ]
 
   - name: gcr.io/cloud-builders/docker
-    args: [ 'push', 'gcr.io/$PROJECT_ID/$_BIN:$SHORT_SHA' ]
+    args: [ 'push', 'gcr.io/$PROJECT_ID/$_BIN' ]
 
 tags: [ 'gamedb', '$_BIN', '$SHORT_SHA' ]
