--- a/docker/Dockerfile_crons
+++ b/docker/Dockerfile_crons
@@ -11,7 +11,7 @@ COPY ./ ./
 RUN apk update \
   && apk add git \
   && cd ./cmd/crons \
-  && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X main.version=`git rev-parse --verify HEAD` -X main.commits=`git rev-list --count master`"
+  && CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-X github.com/gamedb/gamedb/pkg/ldflags.CommitHash=`git rev-parse --verify HEAD` -X github.com/gamedb/gamedb/pkg/ldflags.CommitCount=`git rev-list --count master`"
 
 # Runtime image
 FROM alpine:3.12 AS runtime-env
