--- a/docker/Dockerfile_frontend
+++ b/docker/Dockerfile_frontend
@@ -12,7 +12,7 @@ RUN apk update \
   && apk add git \
   && go get -u github.com/gobuffalo/packr/v2/packr2 \
   && cd ./cmd/frontend \
-  && CGO_ENABLED=0 GOOS=linux packr2 build -a -ldflags "-X main.version=`git rev-parse --verify HEAD` -X main.commits=`git rev-list --count master`"
+  && CGO_ENABLED=0 GOOS=linux packr2 build -a -ldflags "-X github.com/gamedb/gamedb/pkg/ldflags.CommitHash=`git rev-parse --verify HEAD` -X github.com/gamedb/gamedb/pkg/ldflags.CommitCount=`git rev-list --count master`"
 
 # Runtime image
 FROM alpine:3.12 AS runtime-env
