--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -8,4 +8,4 @@ steps:
   - name: gcr.io/cloud-builders/docker
     args: [ 'push', 'gcr.io/$PROJECT_ID/$_BIN' ]
 
-tags: [ 'gamedb', '$_BIN', '$SHORT_SHA' ]
+tags: [ 'globalsteam', '$_BIN', '$SHORT_SHA' ]
