--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: tests
+name: golangci-lint
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
     branches: [ master ]
 
 jobs:
-  tests:
-    name: Tests
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -19,5 +19,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Test
-        run: go test ./...
+      - name: Lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: latest
+          only-new-issues: true
+          skip-go-installation: true
