--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "css-loader": "3.5.3",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "sass-loader": "10.1.1",
+    "sass": "^1.24.4",
+    "sass-loader": "8.0.2",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.43.0",
     "webpack-build-notifier": "2.0.1",
